src/main/resources/eu/hansolo/applefx/apple.css
/* ... */
.macos-text-field:dark:focused {
    -fx-highlight-fill     : -fx-accent;
    -fx-highlight-text-fill: white;
    -fx-background-color   : -fx-focus-color,
    -fx-control-inner-background,
    -fx-faint-focus-color,
    linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
    -fx-background-insets  : -0.2, 1, -1.4, 3;
    -fx-background-radius  : 3, 2, 4, 0;
    -fx-prompt-text-fill   : transparent;
}


/* CheckBox */
.macos-check-box {
    -selection-color     : -BLUE-AQUA;
    -selection-color-dark: -BLUE-DARK;
    -fx-label-padding    : 0 0 0 5;
    -fx-text-fill        : black;
}
.macos-check-box > .box {
    -fx-border-insets    : 0;
    -fx-border-width     : 1;
    -fx-border-style     : solid;
    -fx-border-radius    : 3;
    -fx-border-color     : -GRAY-AQUA;
    -fx-background-radius: 3;
    -fx-background-color : transparent;
    -fx-padding          : 1 1 2 2;
}
.macos-check-box > .box > .mark {
    -fx-background-color: null;
    -fx-padding         : 5 5 6 6;
    -fx-shape           : "M-0.25,6.083c0.843-0.758,4.583,4.833,5.75,4.833S14.5-1.5,15.917-0.917c1.292,0.532-8.75,17.083-10.5,17.083C3,16.167-1.083,6.833-0.25,6.083z";
}
.macos-check-box:selected > .box {
    -fx-border-color    : transparent;
    -fx-background-color: -selection-color;
}
.macos-check-box:selected > .box > .mark {
    -fx-background-color: white;
    -fx-padding         : 5 5 5 5;
    -fx-shape           : "M23.895,35.297L31.077,24.09C31.818,22.935 33.357,22.598 34.512,23.338C35.668,24.079 36.005,25.618 35.264,26.773L26.297,40.767C25.8,41.542 24.944,41.949 24.085,41.909C23.383,41.902 22.689,41.6 22.203,41.02L16.809,34.583C15.927,33.532 16.066,31.962 17.118,31.081C18.169,30.199 19.739,30.337 20.62,31.389L23.895,35.297Z";
}
.macos-check-box:indeterminate > .box {
    -fx-border-color    : transparent;
    -fx-background-color: -selection-color;
}
.macos-check-box:indeterminate  > .box > .mark {
    -fx-background-color: white;
    -fx-shape           : "M0,-0.5H7V1.5H0Z";
    -fx-scale-shape     : false;
    -fx-padding         : 5 5 5 5;
}

.macos-check-box:dark {
    -fx-label-padding: 0 0 0 5;
    -fx-text-fill    : white;
}
.macos-check-box:dark > .box {
    -fx-border-insets    : 0;
    -fx-border-width     : 1;
    -fx-border-style     : solid;
    -fx-border-radius    : 3;
    -fx-border-color     : -GRAY-DARK;
    -fx-background-radius: 3;
    -fx-background-color : transparent;
    -fx-padding          : 1 1 2 2;
}
.macos-check-box:dark > .box > .mark {
    -fx-background-color: null;
    -fx-padding         : 5 5 5 5;
    -fx-shape           : "M-0.25,6.083c0.843-0.758,4.583,4.833,5.75,4.833S14.5-1.5,15.917-0.917c1.292,0.532-8.75,17.083-10.5,17.083C3,16.167-1.083,6.833-0.25,6.083z";
}
.macos-check-box:dark:selected > .box {
    -fx-border-color    : transparent;
    -fx-background-color: -selection-color-dark;
}
.macos-check-box:dark:selected > .box > .mark {
    -fx-background-color: white;
    -fx-padding         : 5 5 5 5;
    -fx-shape           : "M23.895,35.297L31.077,24.09C31.818,22.935 33.357,22.598 34.512,23.338C35.668,24.079 36.005,25.618 35.264,26.773L26.297,40.767C25.8,41.542 24.944,41.949 24.085,41.909C23.383,41.902 22.689,41.6 22.203,41.02L16.809,34.583C15.927,33.532 16.066,31.962 17.118,31.081C18.169,30.199 19.739,30.337 20.62,31.389L23.895,35.297Z";
}
.macos-check-box:dark:indeterminate > .box {
    -fx-border-color    : transparent;
    -fx-background-color: -selection-color-dark;
}
.macos-check-box:dark:indeterminate  > .box > .mark {
    -fx-background-color: white;
    -fx-shape           : "M0,-0.5H7V1.5H0Z";
    -fx-scale-shape     : false;
    -fx-padding         : 5 5 5 5;
}


/* Separator */
.macos-separator:horizontal .line {
    -fx-border-color : rgb(216, 216, 216) transparent transparent transparent, rgb(216, 216, 216) transparent transparent transparent;
    -fx-border-insets: 0, 1 0 0 0;
}
.macos-separator:vertical .line {
    -fx-border-color : transparent transparent transparent rgb(216, 216, 216), transparent transparent transparent rgb(216, 216, 216);
    -fx-border-width : 3, 1;
    -fx-border-insets: 0, 0 0 0 1;
}

.macos-separator:dark:horizontal .line {
    -fx-border-color : rgb(44, 41, 40) transparent transparent transparent, rgb(44, 41, 40) transparent transparent transparent;
    -fx-border-insets: 0, 1 0 0 0;
}
.macos-separator:dark:vertical .line {
    -fx-border-color : transparent transparent transparent rgb(44, 41, 40), transparent transparent transparent rgb(44, 41, 40);
    -fx-border-width : 3, 1;
    -fx-border-insets: 0, 0 0 0 1;
}


/* ScrollBar */
.scroll-bar:horizontal {
    -fx-background-color : transparent;
    -fx-background-insets: 0;
}
.scroll-bar:vertical {
    -fx-background-color : transparent;
    -fx-background-insets: 0;
}
.scroll-bar:horizontal:focused {
    -fx-background-color : transparent;
    -fx-background-insets: 0;
}
.scroll-bar:vertical:focused {
    -fx-background-color : transparent;
    -fx-background-insets: 0;
}
.scroll-bar > .thumb {
    -fx-background-color : rgb(180, 180, 180, 0.35);
    -fx-background-radius: 2em;
}
.scroll-bar:horizontal > .thumb {
    -fx-background-insets: 2 0 2 0;
}
.scroll-bar:vertical > .thumb {
    -fx-background-insets: 0 2 0 2;
}
.scroll-bar:horizontal > .thumb:hover {
    -fx-background-insets: 0;
}
.scroll-bar:vertical > .thumb:hover {
    -fx-background-insets: 0;
}
.scroll-bar > .increment-button,
.scroll-bar > .decrement-button {
    -fx-background-color: transparent;
    -fx-color           : transparent;
    -fx-padding         : 0;
}
.scroll-bar:horizontal > .increment-button,
.scroll-bar:horizontal > .decrement-button {
    -fx-background-insets: 0;
}
.scroll-bar:vertical > .increment-button,
.scroll-bar:vertical > .decrement-button {
    -fx-background-insets: 0;
}
.scroll-bar > .increment-button > .increment-arrow,
.scroll-bar > .decrement-button > .decrement-arrow {
    -fx-background-color: transparent;
}
/* ... */

